# swarmopt

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
benchmarks/: index.html
cli/: index.html
docs/: api.md  benchmarks.md  cli.md  examples.md  how-it-works.md  index.md  xgboost.md
examples/: benchmark.py  benchmark_simple.py  index.html  llm_arch_search.py  neuropt_demo.ipynb  neuropt_kaggle_demo.ipynb  train_fashion.py  train_xgboost.py
fine-tuning/: index.html
how-it-works/: index.html
introspection/: index.html
neuropt/: arch_search.py  introspect.py
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
swarmopt/: __init__.py  arch_search.py  introspect.py  search_space.py
swarmopt/backends/: __init__.py  base.py  claude_backend.py  local_qwen.py  openai_backend.py
xgboost/: index.html
