[project]
name = "swarmopt"
version = "0.3.0"
description = "LLM-guided ML optimization — reads your training curves, designs better models overnight"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dennis Loevlie"},
]
keywords = [
    "neural-architecture-search", "llm", "automl", "hyperparameter",
    "optimization", "pytorch", "machine-learning",
    "architecture-search", "training-curves",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cloudpickle>=3.0",
    "numpy>=1.24",
    "typer>=0.9",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15"]
llm = ["anthropic>=0.40"]
llm-openai = ["openai>=1.0"]
llm-local = ["transformers>=4.37", "accelerate>=0.25"]
viz = ["matplotlib>=3.7", "pandas>=2.0"]
all = [
    "torch>=2.0", "torchvision>=0.15",
    "anthropic>=0.40", "openai>=1.0",
    "transformers>=4.37", "accelerate>=0.25",
    "matplotlib>=3.7", "pandas>=2.0",
]
dev = ["pytest", "optuna"]

[project.scripts]
swarmopt = "swarmopt.cli:app"

[project.urls]
Homepage = "https://github.com/loevlie/swarmopt"
Repository = "https://github.com/loevlie/swarmopt"
Issues = "https://github.com/loevlie/swarmopt/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarmopt"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.5",
]
